public class Carta {

    private String nombre;

    public Carta(String nombre) {
        this.nombre = nombre;
    }

    public String getNombre() {
        return nombre;
    }

    public void usar(Jugador jugador, Juego juego) {
    }
}
